--- a/package.json
+++ b/package.json
@@ -13,5 +13,11 @@
     "browserify": "^14.1.0",
     "ciscospark": "^0.7.65",
     "jquery": "^3.1.1"
+  },
+  "devDependencies": {
+    "jasmine": "^2.5.3",
+    "proxyquire": "^1.7.11",
+    "proxyquire-universal": "^1.0.8",
+    "proxyquireify": "^3.2.1"
   }
 }
