--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "browserify": "^14.1.0",
     "ciscospark": "^0.7.65",
+    "express": "^4.15.2",
     "jquery": "^3.1.1"
   },
   "devDependencies": {
