--- a/package.json
+++ b/package.json
@@ -23,8 +23,8 @@
   },
   "scripts": {
     "start": "node server.js",
-    "start-dev": "watchify src/js/index.js -o src/js/bundle.js & watchify src/js/loginController -o src/js/loginBundle.js & node server.js",
-    "build": "browserify src/js/index.js -o src/js/bundle.js & browserify src/js/loginController -o src/js/loginBundle.js",
+    "start-dev": "watchify js/index.js -o js/bundle.js & watchify js/loginController -o js/loginBundle.js & node server.js",
+    "build": "browserify js/index.js -o js/bundle.js & browserify js/loginController -o js/loginBundle.js",
     "test": "jasmine"
   }
 }
