--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "browserify": "^14.1.0",
     "ciscospark": "^0.7.65",
     "express": "^4.15.2",
-    "jquery": "^3.1.1"
+    "jquery": "^3.1.1",
+    "mki-font-ciscosans": "^1.0.0"
   },
   "devDependencies": {
     "jasmine": "^2.5.3",
@@ -25,13 +26,15 @@
   "scripts": {
     "start": "npm run build && node server.js",
     "start-dev": "npm run build && npm run watch & node server.js",
-    "build": "npm run build-js && npm run build-css && npm run build-html",
+    "build": "npm run build-js && npm run build-css && npm run build-html && npm run build-images && npm run build-fonts",
     "watch": "npm run watch-js & npm run watch-css",
     "build-js": "browserify js/index.js -o public/js/indexBundle.js & browserify js/login -o public/js/loginBundle.js",
     "watch-js": "watchify js/index.js -o public/js/indexBundle.js & watchify js/login -o public/js/loginBundle.js",
     "build-css": "node-sass --include-path scss scss/main.scss public/css/main.css",
     "watch-css": "node-sass -w --include-path scss scss/main.scss public/css/main.css",
     "build-html": "cp *.html public",
+    "build-images": "cp -r images public/",
+    "build-fonts": "mkdir -p public/fonts; cp node_modules/mki-font-ciscosans/files/CiscoSansExtraLight.otf public/fonts/",
     "test": "jasmine"
   }
 }
