--- a/package.json
+++ b/package.json
@@ -28,12 +28,12 @@
     "start-dev": "npm run build && npm run watch & node server.js",
     "build": "npm run build-js && npm run build-css && npm run build-html && npm run build-images && npm run build-fonts",
     "watch": "npm run watch-js & npm run watch-css",
-    "build-js": "browserify js/index.js -o public/js/indexBundle.js & browserify js/login -o public/js/loginBundle.js",
-    "watch-js": "watchify js/index.js -o public/js/indexBundle.js & watchify js/login -o public/js/loginBundle.js",
-    "build-css": "node-sass --include-path scss scss/main.scss public/css/main.css",
-    "watch-css": "node-sass -w --include-path scss scss/main.scss public/css/main.css",
-    "build-html": "cp *.html public",
-    "build-images": "cp -r images public/",
+    "build-js": "mkdir -p public/js; browserify js/index.js -o public/js/indexBundle.js && browserify js/login -o public/js/loginBundle.js",
+    "watch-js": "mkdir -p public/js; watchify js/index.js -o public/js/indexBundle.js & watchify js/login -o public/js/loginBundle.js",
+    "build-css": "mkdir -p public/css; node-sass --include-path scss scss/main.scss public/css/main.css",
+    "watch-css": "mkdir -p public/css; node-sass -w --include-path scss scss/main.scss public/css/main.css",
+    "build-html": "mkdir -p public; cp *.html public",
+    "build-images": "mkdir -p public/images; cp -r images public/",
     "build-fonts": "mkdir -p public/fonts; cp node_modules/mki-font-ciscosans/files/CiscoSansExtraLight.otf public/fonts/",
     "test": "jasmine"
   }
