530 Incorporate error messages for missing devices / permissions for audio & video
Included new 'Kitchen Sink' font for button icons

--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "watch-css": "mkdir -p public/css; node-sass -w --include-path scss scss/main.scss public/css/main.css",
     "build-html": "mkdir -p public; ln -f index.html public/index.html && ln -f login.html public/login.html",
     "build-images": "mkdir -p public/images; cp -r images public/",
-    "build-fonts": "mkdir -p public/fonts; cp node_modules/mki-font-ciscosans/files/CiscoSansExtraLight.otf public/fonts/",
+    "build-fonts": "mkdir -p public/fonts; cp node_modules/mki-font-ciscosans/files/CiscoSansExtraLight.otf public/fonts/; cp -r fonts/ public/fonts/",
     "build-font-awesome": "mkdir -p public/fonts; mkdir -p public/css; cp -r node_modules/font-awesome/css/ public/css; cp -r node_modules/font-awesome/fonts/ public/fonts",
     "test": "jasmine"
   }
