--- a/package.json
+++ b/package.json
@@ -38,10 +38,13 @@
   "dependencies": {
     "browserify": "^14.1.0",
     "ciscospark": "^0.7.72",
+    "ejs": "^4.1.1",
     "express": "^4.15.2",
     "font-awesome": "^4.7.0",
     "jquery": "^3.1.1",
-    "mki-font-ciscosans": "^1.0.0"
+    "mki-font-ciscosans": "^1.0.0",
+    "moment": "^2.18.1",
+    "path": "^0.12.7"
   },
   "devDependencies": {
     "jasmine": "^2.5.3",
@@ -59,8 +62,8 @@
     "start-dev": "npm run build && npm run watch | node server.js",
     "build": "npm run build-js && npm run build-css && npm run build-html && npm run build-images && npm run build-fonts && npm run build-font-awesome",
     "watch": "npm run watch-js | npm run watch-css",
-    "build-js": "mkdir -p public/js; browserify js/index.js -o public/js/indexBundle.js && browserify js/login.js -o public/js/loginBundle.js",
-    "watch-js": "mkdir -p public/js; watchify js/index.js -o public/js/indexBundle.js | watchify js/login.js -o public/js/loginBundle.js",
+    "build-js": "mkdir -p public/js; browserify -t brfs js/index.js -o public/js/indexBundle.js && browserify js/login.js -o public/js/loginBundle.js",
+    "watch-js": "mkdir -p public/js; watchify -t brfs js/index.js -o public/js/indexBundle.js | watchify js/login.js -o public/js/loginBundle.js",
     "build-css": "mkdir -p public/css; node-sass --include-path scss scss/main.scss public/css/main.css",
     "watch-css": "mkdir -p public/css; node-sass -w --include-path scss scss/main.scss public/css/main.css",
     "build-html": "mkdir -p public; ln -f index.html public/index.html && ln -f login.html public/login.html",
