--- a/package.json
+++ b/package.json
@@ -36,17 +36,21 @@
   ],
   "license": "MIT",
   "dependencies": {
-    "browserify": "^14.1.0",
+    "brfs": "^1.4.3",
+    "browserify": "^14.4.0",
     "ciscospark": "^0.7.72",
-    "ejs": "^4.1.1",
+    "ejs": "^2.5.6",
     "express": "^4.15.2",
     "font-awesome": "^4.7.0",
     "jquery": "^3.1.1",
+    "material-design-lite": "^1.3.0",
     "mki-font-ciscosans": "^1.0.0",
     "moment": "^2.18.1",
     "path": "^0.12.7"
   },
   "devDependencies": {
+    "babel-cli": "^6.24.1",
+    "babel-preset-env": "^1.6.0",
     "jasmine": "^2.5.3",
     "node-sass": "^4.5.0",
     "protractor": "^5.1.1",
